[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"]}

[profile.release]
opt-level = 3
